# advent-of-code

./: README.md
2015/02-I_Was_Told_There_Would_Be_No_Math/: Cargo.toml
2015/03-Perfectly_Spherical_Houses_in_a_Vacuum/: Cargo.toml
2015/04-The_Ideal_Stocking_Stuffer/: Cargo.toml
2015/05-Doesn't_He_Have_Intern-Elves_For_This/: Cargo.toml
2015/day1/: Cargo.toml  README.md
2015/day6/: Cargo.toml
2015/day7/: Cargo.toml
2022/: README.md
2022/03-Rucksack_Reorganization/: README.md
2022/04-Camp_Cleanup/: README.md
2022/day2/: README.md
2022/day8/: Cargo.toml  README.md
2023/01-Trebuchet!/: README.md
2023/02-Cube_Conundrum/: README.md
2023/03-Gear_Ratios/: README.md
2023/05-If_You_Give_A_Seed_A_Fertilizer/: README.md
2023/06-Wait_For_It/: Cargo.toml  README.md
2023/07-Camel_Cards/: Cargo.toml
2023/day1/: Cargo.toml
2023/day1/benches/: part_1.rs  part_2.rs
2023/day1/src/: main.rs  part_2.rs
2023/day1/src/tests/: part_1.rs
2023/day3/: Cargo.toml
2023/day4/: Cargo.toml  README.md
2023/day4/benches/: part_1.rs  part_2.rs
2023/day4/src/: lib.rs  part_1.rs  part_1_sets.rs
2023/day4/src/tests/: part_1.rs  part_2.rs
2023/day5/: Cargo.toml  README.md
2024/02-Red-Nosed_Reports/: Cargo.toml  README.md
2024/02-Red-Nosed_Reports/benches/: part_1.rs  part_2.rs
2024/02-Red-Nosed_Reports/src/: part_1.rs  part_2.rs
2024/06-Guard_Gallivant/: Cargo.toml  README.md
2024/06-Guard_Gallivant/benches/: part_1.rs  part_2.rs
2024/06-Guard_Gallivant/src/: part_1.rs  part_2.rs
day1/: README.md
day7/: README.md
template/: README.md
(+137 files in other folders)
