[package]
name = "day1"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "day1"
path = "src/lib.rs"

[dependencies]
fancy-regex = "0.12.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "part_1"
harness = false

[[bench]]
name = "part_2"
harness = false
