[package]
name = "day6"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "day6"
path = "src/lib.rs"

[dependencies]
itertools = "0.13.0"
regex = "1.11.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "part_1"
harness = false

[[bench]]
name = "part_2"
harness = false
